# relayer

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.emailwallet  Dockerfile.relayer  README.md  common.py  coordinator.py  emailwallet.Dockerfile  relayer.Dockerfile  requirements.txt  sendgrid.env.example
.github/workflows/: build-test-fmt.yml
configs/: EmailWallet.json  IERC20.json  IManipulator.json  app_circuit.config  app_circuit_id2.config  app_config_id2.config  manipulation_defs.json  manipulation_defs_example.json  substr_body_id2_1.txt  substr_body_id2_2.txt  substr_body_id2_3.txt
examples/: simple.rs
src/: args.rs  axum_example.rs  chain.rs  chain_client.rs  circom_proofgen.sh  config.rs  coordinator.rs  db.rs  imap_client.rs  js_caller.rs  lib.rs  main.rs  parse_email.rs  processer.rs  prover.rs  receiver.rs  sh_caller.rs  smtp_client.rs  strings.rs
src/chain_client/: halo2_client.rs
src/prover/: halo2_simple.rs
