[package]
name = "relayer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
mail-auth = { git = "https://github.com/Divide-By-0/mail-auth.git", version = "0.3.0", branch = "main" }
regex = "1.5"
dotenv = "0.15.0"
base64 = "0.21.0"
hyper = "0.14.25"
embed_js = "0.1.4"
duct = "0.13.6"
futures = "0.3.28"
trust-dns-resolver = "0.22.0"
sha2 = "0.10.6"
tower = "0.4.13"
